# leetcode

./: -  README.md  leetgo.yaml
contest/: Cargo.toml
contest/biweekly-132/1.clear-digits/: question.md  solution.py  testcases.txt
contest/biweekly-132/2.find-the-first-player-to-win-k-games-in-a-row/: question.md  solution.py  testcases.txt
contest/biweekly-132/3.find-the-maximum-length-of-a-good-subsequence-i/: question.md  solution.py  testcases.txt
contest/biweekly-132/4.find-the-maximum-length-of-a-good-subsequence-ii/: question.md  solution.py  testcases.txt
contest/weekly-393/1.latest-time-you-can-obtain-after-replacing-characters/: question.md  solution.py
contest/weekly-393/2.maximum-prime-difference/: question.md  solution.py
contest/weekly-393/3.kth-smallest-amount-with-single-denomination-combination/: question.md  solution.py  testcases.txt
contest/weekly-393/4.minimum-sum-of-values-by-dividing-array/: question.md  solution.py  testcases.txt
contest/weekly-394/1.count-the-number-of-special-characters-i/: question.md  solution.py  testcases.txt
contest/weekly-394/2.count-the-number-of-special-characters-ii/: question.md  solution.py  testcases.txt
contest/weekly-394/3.minimum-number-of-operations-to-satisfy-conditions/: question.md  solution.py  testcases.txt
contest/weekly-394/4.find-edges-in-shortest-paths/: question.md  solution.py  testcases.txt
contest/weekly-396/1.valid-word/: question.md  solution.py  testcases.txt
contest/weekly-396/2.minimum-number-of-operations-to-make-word-k-periodic/: question.md  solution.py  (+1 more)
(+613 files in other folders)
